# eestv2

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
apps/msbuild_cc_slayer/: CMakeLists.txt  cli.cpp  cli.hpp  compile_commands_printer.cpp  compile_commands_printer.hpp  compile_document.hpp  design.md  diagnostics.hpp  json_parser.cpp  json_parser.hpp  main.cpp  msbuild_document_creator.cpp  msbuild_document_creator.hpp  utility.cpp  utility.hpp
apps/roster_slayer/: CMakeLists.txt  daily_set.cpp  daily_set.hpp  day_pruning.hpp  design_document.md  main.cpp  roster_validation.cpp  roster_validation.hpp  shift.hpp  weekday_shifts.hpp  weekend_shifts.hpp
apps/rosterslayer2/: CMakeLists.txt  day_off_planning_validator.cpp  day_off_planning_validator.hpp  days_of_the_week.hpp  double_day_planning_validator.cpp  double_day_planning_validator.hpp  find_friday.cpp  find_friday.hpp  find_monday.cpp  find_monday.hpp  find_saturday.cpp  find_saturday.hpp  find_sunday.cpp  find_sunday.hpp  find_thursday.cpp  find_thursday.hpp  find_tuesday.cpp  find_tuesday.hpp  find_wednesday.cpp  find_wednesday.hpp  main.cpp  nursing_validator.cpp  nursing_validator.hpp  one_day_planning.hpp  planning_master.cpp  planning_master.hpp  search_context.hpp  search_result_callback.hpp  shift.hpp  shifts_enums.hpp  time.hpp  week_planning.hpp  weekday_shifts.hpp  weekend_shifts.hpp
apps/slayerlog/: CMakeLists.txt  all_tracked_sources.hpp  command_history.cpp  command_line_parser.cpp  command_line_parser.hpp  command_manager.cpp  command_manager.hpp  command_palette_controller.cpp  command_palette_controller.hpp  command_palette_model.hpp  command_palette_view.cpp  command_palette_view.hpp  debug_log.hpp  file_watcher.cpp  file_watcher.hpp  input_controller.cpp  input_controller.hpp  log4cplus.ini  log_batch.cpp  log_batch.hpp  log_controller.cpp  log_controller.hpp  log_line.hpp  log_model.cpp  log_model.hpp  log_source.cpp  log_source.hpp  log_timestamp.cpp  log_timestamp.hpp  log_types.hpp  log_view.cpp  log_view.hpp  log_view_model.cpp  log_view_model.hpp  log_watcher.hpp  main.cpp  master_controller.cpp  master_controller.hpp  master_view.cpp  master_view.hpp  (+16 more)
apps/slayerlog/commands/: command_history.cpp  command_history.hpp  command_manager.cpp  command_manager.hpp  command_palette_controller.cpp  command_palette_controller.hpp  command_palette_model.hpp  command_palette_view.cpp  command_palette_view.hpp  command_registrar.cpp  command_registrar.hpp
apps/slayerlog/debugging/: demo_log_writer.py
apps/slayerlog/timestamp/: log_time_point.hpp  log_timestamp.cpp  log_timestamp.hpp  source_timestamp_parser.cpp  source_timestamp_parser.hpp  timestamp_format_catalog.cpp  timestamp_format_catalog.hpp
apps/slayerlog/tracked_sources/: all_processed_sources.cpp  all_processed_sources.hpp  all_tracked_sources.cpp  all_tracked_sources.hpp  log_line.hpp  tracked_source.cpp  tracked_source.hpp  tracked_source_base.cpp  tracked_source_base.hpp  tracked_source_factory.cpp  tracked_source_factory.hpp  tracked_source_file.cpp  tracked_source_file.hpp  tracked_source_folder.cpp  tracked_source_folder.hpp
apps/slayerlog/watchers/: file_watcher.cpp  file_watcher.hpp  folder_watcher.cpp  folder_watcher.hpp  log_watcher_base.hpp  log_watcher_factory.cpp  log_watcher_factory.hpp  process_pipe.cpp  ssh_tail_watcher.cpp  ssh_tail_watcher.hpp  stream_line_buffer.cpp  stream_line_buffer.hpp  zstd_file_watcher.cpp  zstd_file_watcher.hpp
examples/: CMakeLists.txt
examples/asyncNotify/: CMakeLists.txt  can_bus_data_provider.cpp  can_bus_data_provider.hpp  can_manager.cpp  can_manager.hpp  can_notify.cpp  can_notify.hpp  can_signals.hpp  container.cpp  container.hpp  main.cpp
examples/data_bridge/: main.cpp
examples/ftxui_text_view/: CMakeLists.txt  main.cpp
examples/fxtui_text_view/: CMakeLists.txt  main.cpp  text_view_controller.cpp  text_view_controller.hpp  text_view_model.cpp  text_view_model.hpp  text_view_view.cpp  text_view_view.hpp
examples/multi_printer/: CMakeLists.txt  main.cpp  multi_printer.hpp
examples/multi_serializer/: CMakeLists.txt  README.md  main.cpp  multi_serializer.hpp  serialization_example.cpp
examples/net/discovery/: client.cpp  server.cpp
examples/net/tcp_connection/: main.cpp
examples/sfinae/: main.cpp  make_robot_do_something.hpp  robot_mover.hpp
examples/slayerlog/compressed_logs/: 01_app_start.log.zst  02_worker.log.zst  03_http.log.zst
examples/templates/: CMakeLists.txt
examples/timestamp_benchmark/: CMakeLists.txt  main.cpp
examples/variadic_templates/: CMakeLists.txt  main.cpp
libs/ftxui_components/: CMakeLists.txt  text_view_controller.cpp  text_view_model.cpp  text_view_view.cpp
libs/ftxui_components/ftxui_components/: text_view_controller.hpp  text_view_model.hpp  text_view_view.hpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/data_bridge/: data_bridge_cli_tests.cpp
tests/unit_tests/flags/: flags_tests.cpp  synchronous_flags_tests.cpp
tests/unit_tests/ftxui_components/: text_view_controller_tests.cpp
tests/unit_tests/net/: network_utils_tests.cpp
tests/unit_tests/net/connection/: tcp_client_life_cycle_tests.cpp  tcp_connection_tests.cpp  (+4 more)
tests/unit_tests/roster_slayer/: hard_rules_tests.cpp  roster_tests.cpp  shift_tests.cpp  soft_scoring_tests.cpp  week_pair_generator_tests.cpp
tests/unit_tests/serial/: serialization_mux_tests.cpp  serialization_tests.cpp
tests/unit_tests/slayerlog/: command_history_tests.cpp  command_line_parser_tests.cpp  command_manager_tests.cpp  command_palette_controller_tests.cpp  command_registrar_tests.cpp  file_watcher_tests.cpp  folder_watcher_tests.cpp  input_controller_tests.cpp  log_batch_tests.cpp  log_controller_tests.cpp  log_model_tests.cpp  log_source_tests.cpp  log_timestamp_tests.cpp  log_view_model_tests.cpp  master_controller_tests.cpp  settings_ini_tests.cpp  stream_line_buffer_tests.cpp  tracked_source_manager_tests.cpp  tracked_source_tests.cpp  zstd_file_watcher_tests.cpp
tests/unit_tests/timestamp/: timestamp_parser_tests.cpp
(+10 files in other folders)
