cmake_minimum_required(VERSION 3.21)

project(academic)

# Allow Boost to be supplied either through the cache or the environment so
# CMake presets and IDE integrations can configure the project cleanly.
set(BOOST_ROOT
    "$ENV{BOOST_ROOT}"
    CACHE PATH "Path to the Boost source tree used by add_subdirectory()")

if(NOT BOOST_ROOT)
  message(
    FATAL_ERROR
      "BOOST_ROOT is not set. Pass -DBOOST_ROOT=<path-to-boost> or set the BOOST_ROOT environment variable."
  )
endif()

# Specify which Boost libraries to include (limits build to essentials; add more
# if needed)
set(BOOST_INCLUDE_LIBRARIES
    asio
    system
    program_options
    log
    filesystem
    thread
    regex
    date_time
    atomic) # 'log' also exports Boost::log_setup; 'system' is often
# needed for ASIO
# error handling
set(BOOST_ENABLE_CMAKE ON)

# Add Boost as a subdirectory using the configured root path.
add_subdirectory("${BOOST_ROOT}" my_boost)

# Set output directories for all targets globally
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

# Set C++17 standard globally
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# On Windows ensure a minimum _WIN32_WINNT is defined so system headers (and
# Boost.Asio) target the correct Win32 APIs and avoid warnings.
if(WIN32)
  add_compile_definitions(_WIN32_WINNT=0x0601)
endif()

# Allow disabling CTest (e.g., for TSAN where test discovery doesn't work well)
option(ENABLE_CTEST "Enable CTest and test discovery" ON)
if(ENABLE_CTEST)
  enable_testing()
endif()

set(FTXUI_BUILD_DOCS
    OFF
    CACHE BOOL "Disable FTXUI docs in the superproject" FORCE)
set(FTXUI_BUILD_EXAMPLES
    OFF
    CACHE BOOL "Disable FTXUI examples in the superproject" FORCE)
set(FTXUI_BUILD_TESTS
    OFF
    CACHE BOOL "Disable FTXUI tests in the superproject" FORCE)
set(FTXUI_BUILD_TESTS_FUZZER
    OFF
    CACHE BOOL "Disable FTXUI fuzz tests in the superproject" FORCE)
set(FTXUI_BUILD_MODULES
    OFF
    CACHE BOOL "Disable FTXUI C++20 modules in the superproject" FORCE)

add_subdirectory(libs/fxtui)
set(gtest_force_shared_crt
    ON
    CACHE BOOL "Use the shared CRT for GoogleTest on MSVC" FORCE)
if(WIN32)
  # GoogleTest's pthread probing is unnecessary on MSVC and can fail in
  # Windows-only environments that do not provide pthread headers or libs.
  set(gtest_disable_pthreads
      ON
      CACHE BOOL "Disable pthreads for GoogleTest on Windows" FORCE)
endif()
add_subdirectory(libs/googletest)
add_subdirectory(code)
add_subdirectory(apps)
add_subdirectory(examples)
add_subdirectory(tests/unit_tests)

# -----------------------------------------------------------------------------
# Custom target: copy and normalize compile_commands.json
#
# This creates a small CMake script under the build dir that reads
# ${CMAKE_BINARY_DIR}/compile_commands.json, replaces occurrences of "C:" with
# "c:" and writes the result into the source tree at
# ${CMAKE_SOURCE_DIR}/compile_commands.json. The target is named
# `copy_compile_commands` and depends on the build-tree file so it runs after
# the compile database exists.
# -----------------------------------------------------------------------------

# Ensure compile_commands.json is generated by the build system/generator
if(NOT CMAKE_EXPORT_COMPILE_COMMANDS)
  set(CMAKE_EXPORT_COMPILE_COMMANDS
      ON
      CACHE BOOL "Generate compile_commands.json in build dir" FORCE)
endif()

set(_cc_src "${CMAKE_BINARY_DIR}/compile_commands.json")
set(_cc_dst "${CMAKE_SOURCE_DIR}/compile_commands.json")
set(CC_SRC "${_cc_src}")
set(CC_DST "${_cc_dst}")
set(_cc_script_dir "${CMAKE_BINARY_DIR}/cmake")
set(_cc_script "${_cc_script_dir}/copy_compile_commands.cmake")

file(MAKE_DIRECTORY "${_cc_script_dir}")

# Configure the runtime CMake script into the build tree. The template is
# `cmake/copy_compile_commands.cmake.in` and uses @CC_SRC@/@CC_DST@
# placeholders.
configure_file("${CMAKE_SOURCE_DIR}/cmake/copy_compile_commands.cmake.in"
               "${_cc_script}" @ONLY)

add_custom_target(
  copy_compile_commands
  COMMAND ${CMAKE_COMMAND} -P "${_cc_script}"
  DEPENDS "${_cc_src}"
  COMMENT "Copy and normalize compile_commands.json into source directory"
  VERBATIM)
