add_subdirectory(spinlock_mutex)
add_subdirectory(templates)
add_subdirectory(overloading)
add_subdirectory(sfinae)
add_subdirectory(net/discovery)
add_subdirectory(data_bridge)
add_subdirectory(ftxui_text_view)
add_subdirectory(multi_printer)
add_subdirectory(multi_serializer)
add_subdirectory(timestamp_benchmark)
add_subdirectory(variadic_templates)
